[workspace]
resolver = "2"
members = [
  # Inner libs
  "crates/cesium-storage",
  "crates/cesium-material",
  "crates/cesium-mempool",
  "crates/cesium-state",
  "crates/cesium-econ",
  "crates/selenide/se-compiler",
  "crates/selenide/se-vm",
  "crates/selenide/se-opcodes",
  "crates/cesium-runtime",
  "contracts/hello",

  # Executables
  "cesium-node",
  "selc"
]

[workspace.package]
version = "0.1.0"

[profile.release]
debug = 1
split-debuginfo = 'packed'
strip = 'debuginfo'
panic = 'abort'

[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

[profile.bench]
strip = 'none'

[workspace.dependencies]
tokio = { version = "1.41.0", features = ["full"] }
pqcrypto-sphincsplus = { version = "0.7.0", features = ["avx2"] }
pqcrypto-traits = "0.3.5"
hex = "0.4.3"
rand = "0.8.5"
bs58 = "0.5.1"
sha3 = "0.10.8"
rocksdb = "0.22.0"
bincode = "1.3.3"
tempfile = "3.13.0"
wasmedge-sdk = "0.14.0"
wasmedge-sys = "0.19.2"
serde = { version = "1.0.213", features = ["derive"] }
# Inner libs
cesium-storage = { path = "crates/cesium-storage" }
cesium-material = { path = "crates/cesium-material" }
cesium-mempool = { path = "crates/cesium-mempool" }
cesium-state = { path = "crates/cesium-state" }
cesium-econ = { path = "crates/cesium-econ" }
se-compiler = { path = "crates/selenide/se-compiler" }
se-vm = { path = "crates/selenide/se-vm" }
se-opcodes = { path = "crates/selenide/se-opcodes" }
cesium-runtime = { path = "crates/cesium-runtime" }