[workspace]
resolver = "2"
members = [
  # Inner libs
  "crates/cesium-crypto",
  "crates/cesium-storage",
  "crates/cesium-nucleus",
  "crates/cesium-nebula",
  "crates/cesium-sdk",
  "crates/cesium-standards",
  "crates/cesium-horizon",
  "crates/selenide-sdk",
  "crates/selenide-sdk-macros",
  "crates/selenide-runtime",

  # Contracts
  "contracts/state",
  "contracts/state_sdk",

  # Executables
  "validator",
  "clisium",
]

[workspace.package]
version = "0.2.0"

[profile.release]
debug = 1
split-debuginfo = 'packed'
strip = 'debuginfo'
panic = 'abort'

[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

[profile.bench]
strip = 'none'

[workspace.dependencies]
tokio = { version = "1.41.0", features = ["full"] }
pqcrypto-sphincsplus = { version = "0.7.0", features = ["avx2"] }
pqcrypto-traits = "0.3.5"
hex = "0.4.3"
rand = "0.8.5"
bs58 = "0.5.1"
sha3 = "0.10.8"
rocksdb = "0.22.0"
bincode = "1.3.3"
tempfile = "3.13.0"
once_cell = "1.20.2"
serde = { version = "1.0.213", features = ["derive"] }
wasmer = { version = "5.0.0", features = ["singlepass"] }
wasmer-middlewares = "5.0.0"
clap = { version = "4.5.20", features = ["derive"]}
dashmap = "6.1.0"
dirs = "5.0.1"
# Inner libs
cesium-crypto = { path = "crates/cesium-crypto" }
cesium-storage = { path = "crates/cesium-storage" }
cesium-runtime = { path = "crates/cesium-runtime" }
cesium-nucleus = { path = "crates/cesium-nucleus" }
cesium-nebula = { path = "crates/cesium-nebula" }
cesium-standards = { path = "crates/cesium-standards" }
cesium-horizon = { path = "crates/cesium-horizon" }
selenide-sdk = { path = "crates/selenide-sdk" }
selenide-sdk-macros = { path = "crates/selenide-sdk-macros" }
selenide-runtime = { path = "crates/selenide-runtime" }