[package]
name = "cesium-crypto"
edition = "2021"
version.workspace = true
license = "GPL-3.0"
publish = false


[dependencies]
pqcrypto-sphincsplus.workspace = true
pqcrypto-traits.workspace = true
pqcrypto-mldsa.workspace = true
hex.workspace = true
rand.workspace = true
bs58.workspace = true
serde.workspace = true
sha3.workspace = true
cesium-standards.workspace = true