[package]
name = "cesium-nebula"
edition = "2021"
version.workspace = true
license = "GPL-3.0"
publish = false

[dependencies]
cesium-crypto.workspace = true
cesium-storage.workspace = true
selenide-runtime.workspace = true
cesium-standards.workspace = true
tokio.workspace = true
dashmap.workspace = true

[dev-dependencies]