[package]
name = "cesium-nucleus"
edition = "2021"
version.workspace = true
license = "GPL-3.0"
publish = false

[dependencies]
tokio.workspace = true
cesium-crypto.workspace = true
cesium-nebula.workspace = true
dashmap.workspace = true
cesium-horizon.workspace = true
cesium-storage.workspace = true
futures.workspace = true