[package]
name = "cesium-rpc"
edition = "2021"
version.workspace = true
license = "GPL-3.0"
publish = false

[dependencies]
tokio.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros"]}
hex.workspace = true
cesium-nebula.workspace = true

[dev-dependencies]
jsonrpsee = { workspace = true, features = ["http-client", "ws-client", "macros"]}